# House-Price-Prediction

./: .gitignore  README.md  requirements.txt
house_prices/: LICENSE.txt  inference.py  preprocess.py  setup.cfg  train.py
notebooks/: house-prices-modeling.ipynb  model-industrialization-final.ipynb .ipynb  my-1st-notebook.ipynb
