[metadata]
name = house_prices_prediction
version = 0.0.1
author = Thi Truc Linh LE
author_email = truclinh240995@gmail.com
description = Data Science in Production
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LinhLE2469/DSP-ThiTrucLinh-LE.git
project_urls =
    Bug Tracker = https://github.com/LinhLE2469/DSP-ThiTrucLinh-LE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.6
    pandas
    numpy
    scikit-learn
    scipy
    sys
    joblib
[options.packages.find]
where = src